--- a/app/src/main/res/layout/activity_admin_home_page.xml
+++ b/app/src/main/res/layout/activity_admin_home_page.xml
@@ -86,58 +86,58 @@
                 <!-- Top card view Ends -->
 
                 <!-- Search bar Start -->
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/searchBar"
-                    android:layout_width="0dp"
-                    android:layout_height="45dp"
-                    app:cardCornerRadius="25dp"
-                    app:cardElevation="8dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    app:layout_constraintTop_toBottomOf="@id/topCardView"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:background="@android:color/white">
+<!--                <androidx.cardview.widget.CardView-->
+<!--                    android:id="@+id/searchBar"-->
+<!--                    android:layout_width="0dp"-->
+<!--                    android:layout_height="45dp"-->
+<!--                    app:cardCornerRadius="25dp"-->
+<!--                    app:cardElevation="8dp"-->
+<!--                    android:layout_marginTop="10dp"-->
+<!--                    android:layout_marginStart="16dp"-->
+<!--                    android:layout_marginEnd="16dp"-->
+<!--                    app:layout_constraintTop_toBottomOf="@id/topCardView"-->
+<!--                    app:layout_constraintStart_toStartOf="parent"-->
+<!--                    app:layout_constraintEnd_toEndOf="parent"-->
+<!--                    android:background="@android:color/white">-->
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:padding="8dp"
-                        android:gravity="center_vertical">
+<!--                    <LinearLayout-->
+<!--                        android:layout_width="match_parent"-->
+<!--                        android:layout_height="match_parent"-->
+<!--                        android:orientation="horizontal"-->
+<!--                        android:padding="8dp"-->
+<!--                        android:gravity="center_vertical">-->
 
-                        <ImageView
-                            android:id="@+id/searchIcon"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginEnd="18dp"
-                            android:src="@drawable/ic_search"
-                            android:contentDescription="Search Icon" />
+<!--                        <ImageView-->
+<!--                            android:id="@+id/searchIcon"-->
+<!--                            android:layout_width="24dp"-->
+<!--                            android:layout_height="24dp"-->
+<!--                            android:layout_marginStart="8dp"-->
+<!--                            android:layout_marginEnd="18dp"-->
+<!--                            android:src="@drawable/ic_search"-->
+<!--                            android:contentDescription="Search Icon" />-->
 
-                        <EditText
-                            android:id="@+id/searchEditText"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:hint="Search"
-                            android:textColorHint="#808080"
-                            android:textColor="#000000"
-                            android:background="@android:color/transparent"
-                            android:padding="0dp"
-                            android:gravity="center_vertical" />
+<!--                        <EditText-->
+<!--                            android:id="@+id/searchEditText"-->
+<!--                            android:layout_width="0dp"-->
+<!--                            android:layout_height="match_parent"-->
+<!--                            android:layout_weight="1"-->
+<!--                            android:hint="Search"-->
+<!--                            android:textColorHint="#808080"-->
+<!--                            android:textColor="#000000"-->
+<!--                            android:background="@android:color/transparent"-->
+<!--                            android:padding="0dp"-->
+<!--                            android:gravity="center_vertical" />-->
 
-                        <ImageView
-                            android:id="@+id/twoDotsIcon"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:layout_marginEnd="18dp"
-                            android:src="@drawable/two_dots"
-                            android:contentDescription="Two Dots Icon" />
+<!--                        <ImageView-->
+<!--                            android:id="@+id/twoDotsIcon"-->
+<!--                            android:layout_width="24dp"-->
+<!--                            android:layout_height="24dp"-->
+<!--                            android:layout_marginEnd="18dp"-->
+<!--                            android:src="@drawable/two_dots"-->
+<!--                            android:contentDescription="Two Dots Icon" />-->
 
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
+<!--                    </LinearLayout>-->
+<!--                </androidx.cardview.widget.CardView>-->
                 <!-- Search bar Ends -->
 
                 <ImageView
@@ -145,10 +145,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:adjustViewBounds="true"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="20dp"
                     android:src="@drawable/division"
                     android:contentDescription="@null"
-                    app:layout_constraintTop_toBottomOf="@id/searchBar"
+                    app:layout_constraintTop_toBottomOf="@id/topCardView"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
 
