--- a/app/src/main/res/layout/activity_cr_home_page.xml
+++ b/app/src/main/res/layout/activity_cr_home_page.xml
@@ -16,6 +16,7 @@
 
 
         <androidx.core.widget.NestedScrollView
+            android:id="@+id/nestedScrollView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="true"
