--- a/app/src/main/res/layout/activity_guest_home_page.xml
+++ b/app/src/main/res/layout/activity_guest_home_page.xml
@@ -76,67 +76,18 @@
                 </com.google.android.material.card.MaterialCardView>
 
                 <!-- Search bar -->
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/searchBar"
-                    android:layout_width="0dp"
-                    android:layout_height="45dp"
-                    app:cardCornerRadius="25dp"
-                    app:cardElevation="8dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    app:layout_constraintTop_toBottomOf="@id/topCardView"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent">
-
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:padding="8dp"
-                        android:gravity="center_vertical">
-
-                        <ImageView
-                            android:id="@+id/searchIcon"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginEnd="18dp"
-                            android:src="@drawable/ic_search"
-                            android:contentDescription="Search Icon" />
-
-                        <EditText
-                            android:id="@+id/searchEditText"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:hint="Search"
-                            android:textColorHint="#808080"
-                            android:textColor="#000000"
-                            android:background="@android:color/transparent"
-                            android:padding="0dp"
-                            android:gravity="center_vertical" />
-
-                        <ImageView
-                            android:id="@+id/twoDotsIcon"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:layout_marginEnd="18dp"
-                            android:src="@drawable/two_dots"
-                            android:contentDescription="Two Dots Icon" />
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
 
                 <!-- Content divider -->
                 <ImageView
+
                     android:id="@+id/Divider"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="20dp"
                     android:adjustViewBounds="true"
                     android:src="@drawable/division"
                     android:contentDescription="@null"
-                    app:layout_constraintTop_toBottomOf="@id/searchBar"
+                    app:layout_constraintTop_toBottomOf="@id/topCardView"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent" />
 
@@ -301,27 +252,40 @@
                     </LinearLayout>
                 </androidx.cardview.widget.CardView>
 
+                <ImageView
+                    android:id="@+id/Divider2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/division"
+                    android:contentDescription="@null"
+                    app:layout_constraintTop_toBottomOf="@id/statusCardView"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
                 <LinearLayout
                     android:id="@+id/routineRoomLayout"
                     android:layout_width="match_parent"
-                    android:layout_height="200dp"
+                    android:layout_height="120dp"
                     android:orientation="horizontal"
                     android:gravity="center"
                     android:layout_marginTop="0dp"
-                    app:layout_constraintTop_toBottomOf="@id/statusCardView"
+                    app:layout_constraintTop_toBottomOf="@id/Divider2"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent">
 
                     <androidx.cardview.widget.CardView
                         android:id="@+id/guest_routineCardView"
                         android:layout_width="0dp"
-                        android:layout_height="150dp"
+                        android:layout_height="100dp"
                         android:layout_weight="1"
                         android:layout_margin="8dp"
-                        app:cardCornerRadius="16dp"
-                        app:cardElevation="8dp">
+                        app:cardCornerRadius="10dp"
+                        app:cardElevation="4dp">
 
                         <LinearLayout
+                            android:id="@+id/routineCardView"
+
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:orientation="vertical"
@@ -330,31 +294,31 @@
 
                             <ImageView
                                 android:id="@+id/routineIcon"
-                                android:layout_width="90dp"
-                                android:layout_height="90dp"
+                                android:layout_width="60dp"
+                                android:layout_height="60dp"
                                 android:src="@drawable/routine"
                                 android:contentDescription="Routine Icon"
-                                android:layout_marginBottom="8dp" />
+                                android:layout_marginBottom="0dp" />
 
                             <TextView
                                 android:id="@+id/routineText"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Routine"
-                                android:textSize="30sp"
+                                android:text="Student's Routine"
+                                android:textSize="17sp"
                                 android:textColor="@color/Theme_green"
                                 android:textStyle="bold" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
 
                     <androidx.cardview.widget.CardView
-                        android:id="@+id/guest_roomsCardView"
+                        android:id="@+id/teacherRoutine"
                         android:layout_width="0dp"
-                        android:layout_height="150dp"
+                        android:layout_height="100dp"
                         android:layout_weight="1"
                         android:layout_margin="8dp"
-                        app:cardCornerRadius="16dp"
-                        app:cardElevation="8dp">
+                        app:cardCornerRadius="10dp"
+                        app:cardElevation="4dp">
 
                         <LinearLayout
                             android:layout_width="match_parent"
@@ -364,87 +328,147 @@
                             android:gravity="center">
 
                             <ImageView
-                                android:id="@+id/roomsIcon"
-                                android:layout_width="90dp"
-                                android:layout_height="90dp"
-                                android:src="@drawable/rooms"
+                                android:id="@+id/upcomingTaskIcon"
+                                android:layout_width="60dp"
+                                android:layout_height="60dp"
+                                android:src="@drawable/teacher_rtn"
                                 android:contentDescription="Rooms Icon"
-                                android:layout_marginBottom="8dp" />
+                                android:layout_marginBottom="0dp" />
 
                             <TextView
-                                android:id="@+id/roomsText"
+                                android:id="@+id/upcomingTaskText"
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
-                                android:text="Rooms"
-                                android:textSize="30sp"
+                                android:text="Teacher's Routine"
+                                android:textSize="17sp"
                                 android:textColor="@color/Theme_Lightgreen"
                                 android:textStyle="bold" />
                         </LinearLayout>
                     </androidx.cardview.widget.CardView>
                 </LinearLayout>
+
+                <ImageView
+                    android:id="@+id/Divider3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:adjustViewBounds="true"
+                    android:src="@drawable/division"
+                    android:contentDescription="@null"
+                    app:layout_constraintTop_toBottomOf="@id/routineRoomLayout"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent" />
+
                 <LinearLayout
                     android:id="@+id/othersLayout"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="vertical"
-                    android:layout_marginTop="0dp"
-                    android:padding="0dp"
+                    android:layout_marginTop="4dp"
+                    android:padding="2dp"
                     app:layout_constraintTop_toBottomOf="@id/routineRoomLayout"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintEnd_toEndOf="parent">
 
+                    <TextView
+                        android:id="@+id/othersTitle"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Others"
+                        android:textSize="18sp"
+                        android:layout_marginStart="10dp"
+                        android:textColor="@color/Theme_green"
+                        android:textStyle="bold"
+                        android:layout_marginBottom="4dp" />
+
                     <LinearLayout
                         android:layout_width="match_parent"
-                        android:layout_height="180dp"
-                        android:layout_marginBottom="20dp"
+                        android:layout_height="120dp"
+                        android:layout_marginBottom="0dp"
                         android:orientation="horizontal">
 
                         <androidx.cardview.widget.CardView
                             android:id="@+id/guest_teachersInfoCard"
-                            android:layout_width="100dp"
-                            android:layout_height="150dp"
+                            android:layout_width="0dp"
+                            android:layout_height="100dp"
                             android:layout_weight="1"
                             android:layout_margin="8dp"
-                            app:cardCornerRadius="16dp"
-                            app:cardElevation="8dp">
+                            app:cardCornerRadius="10dp"
+                            app:cardElevation="4dp">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
                                 android:layout_height="match_parent"
-                                android:orientation="horizontal"
-                                android:background="@drawable/rounded_bottom"
+                                android:orientation="vertical"
+                                android:background="@drawable/card_bg_row"
                                 android:gravity="center">
 
                                 <ImageView
                                     android:id="@+id/teachersInfoIcon"
-                                    android:layout_width="100dp"
-                                    android:layout_height="100dp"
-                                    android:layout_marginLeft="10dp"
+                                    android:layout_width="60dp"
+                                    android:layout_height="60dp"
+
                                     android:src="@drawable/teacher_info"
                                     android:contentDescription="Teachers Info Icon"
-                                    android:layout_marginBottom="8dp" />
+                                    android:layout_marginBottom="0dp" />
 
                                 <TextView
                                     android:id="@+id/teachersInfoText"
-                                    android:layout_width="124dp"
+                                    android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:layout_marginRight="15dp"
+
                                     android:text="Teachers Info"
+                                    android:textSize="12sp"
+                                    android:textAlignment="center"
+                                    android:textColor="@color/Theme_green"
+                                    android:textStyle="bold" />
+                            </LinearLayout>
+                        </androidx.cardview.widget.CardView>
+                        <androidx.cardview.widget.CardView
+                            android:id="@+id/university_map"
+                            android:layout_width="0dp"
+                            android:layout_height="100dp"
+                            android:layout_weight="1"
+                            android:layout_margin="8dp"
+                            app:cardCornerRadius="10dp"
+                            app:cardElevation="4dp">
+
+                            <LinearLayout
+                                android:layout_width="match_parent"
+                                android:layout_height="match_parent"
+                                android:orientation="vertical"
+                                android:background="@color/Theme_green"
+                                android:gravity="center">
+
+                                <ImageView
+                                    android:id="@+id/teachersrtnIcon"
+                                    android:layout_width="60dp"
+                                    android:layout_height="60dp"
+
+                                    android:src="@drawable/map_icon"
+                                    android:contentDescription="Teachers Info Icon"
+                                    android:layout_marginBottom="0dp" />
+
+                                <TextView
+                                    android:id="@+id/teachersrtnText"
+                                    android:layout_width="wrap_content"
+                                    android:layout_height="wrap_content"
+
+                                    android:text="University Map"
+                                    android:textSize="12sp"
                                     android:textAlignment="center"
                                     android:textColor="@color/Theme_Lightgreen"
-                                    android:textSize="29sp"
                                     android:textStyle="bold" />
                             </LinearLayout>
                         </androidx.cardview.widget.CardView>
 
                         <androidx.cardview.widget.CardView
-                            android:id="@+id/university_map"
+                            android:id="@+id/guest_roomsCardView"
                             android:layout_width="0dp"
-                            android:layout_height="150dp"
+                            android:layout_height="100dp"
                             android:layout_weight="1"
                             android:layout_margin="8dp"
-                            app:cardCornerRadius="16dp"
-                            app:cardElevation="8dp">
+                            app:cardCornerRadius="10dp"
+                            app:cardElevation="4dp">
 
                             <LinearLayout
                                 android:layout_width="match_parent"
@@ -454,20 +478,20 @@
                                 android:gravity="center">
 
                                 <ImageView
-                                    android:id="@+id/universityMapIcon"
+                                    android:id="@+id/othersRoutineIcon"
                                     android:layout_width="60dp"
                                     android:layout_height="60dp"
-                                    android:src="@drawable/map_icon"
-                                    android:contentDescription="University Map Icon"
-                                    android:layout_marginBottom="8dp" />
+                                    android:src="@drawable/rooms"
+                                    android:contentDescription=" Icon"
+                                    android:layout_marginBottom="8dp"
+                                    app:tint="@color/Theme_green" />
 
                                 <TextView
-                                    android:id="@+id/universityMapText"
+                                    android:id="@+id/othersRoutineText"
                                     android:layout_width="wrap_content"
                                     android:layout_height="wrap_content"
-                                    android:text="University Map"
-                                    android:textSize="27sp"
-                                    android:textAlignment="center"
+                                    android:text="Rooms"
+                                    android:textSize="12sp"
                                     android:textColor="@color/Theme_green"
                                     android:textStyle="bold" />
                             </LinearLayout>
@@ -485,7 +509,7 @@
     <LinearLayout
         android:id="@+id/navDrawerContainer"
         android:layout_width="300dp"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:layout_gravity="start"
         android:orientation="vertical"
         android:background="@drawable/bg_drawer_rounded"
