--- a/app/src/main/res/layout/activity_student_home_page.xml
+++ b/app/src/main/res/layout/activity_student_home_page.xml
@@ -82,6 +82,20 @@
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintHorizontal_bias="0.5" />
 
+                <ImageView
+                    android:id="@+id/searchIcon"
+                    android:layout_width="24dp"
+                    android:layout_height="24dp"
+                    android:layout_marginStart="0dp"
+                    android:layout_marginEnd="15dp"
+                    android:src="@drawable/ic_search"
+                    app:tint="@color/white"
+                    android:adjustViewBounds="true"
+                    android:contentDescription="Search Icon"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"/>
+
             </androidx.constraintlayout.widget.ConstraintLayout>
 
         </com.google.android.material.card.MaterialCardView>
@@ -107,77 +121,11 @@
 
 
 
-                <!-- Search bar Start -->
-                <androidx.cardview.widget.CardView
-                    android:id="@+id/searchBar"
-                    android:layout_width="0dp"
-                    android:layout_height="45dp"
-                    app:cardCornerRadius="25dp"
-                    app:cardElevation="8dp"
-                    android:layout_marginTop="10dp"
-                    android:layout_marginStart="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:paddingTop="5dp"
 
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    android:background="@android:color/white"
-                    tools:ignore="MissingConstraints">
 
-                    <LinearLayout
-                        android:layout_width="match_parent"
-                        android:layout_height="match_parent"
-                        android:orientation="horizontal"
-                        android:padding="8dp"
-                        android:layout_marginTop="5dp"
-                        android:gravity="center_vertical">
 
-                        <ImageView
-                            android:id="@+id/searchIcon"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:layout_marginStart="8dp"
-                            android:layout_marginEnd="18dp"
-                            android:src="@drawable/ic_search"
-                            android:contentDescription="Search Icon" />
 
-                        <EditText
-                            android:id="@+id/searchEditText"
-                            android:layout_width="0dp"
-                            android:layout_height="match_parent"
-                            android:layout_weight="1"
-                            android:hint="Search"
-                            android:textColorHint="#808080"
-                            android:textColor="#000000"
-                            android:background="@android:color/transparent"
-                            android:padding="0dp"
-                            android:gravity="center_vertical" />
-
-                        <ImageView
-                            android:id="@+id/twoDotsIcon"
-                            android:layout_width="24dp"
-                            android:layout_height="24dp"
-                            android:layout_marginEnd="18dp"
-                            android:src="@drawable/two_dots"
-                            android:contentDescription="Two Dots Icon" />
-
-                    </LinearLayout>
-                </androidx.cardview.widget.CardView>
-                <!-- Search bar Ends -->
-
-                <ImageView
-                    android:id="@+id/Divider"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:adjustViewBounds="true"
-                    android:layout_marginTop="10dp"
-                    android:src="@drawable/division"
-                    android:contentDescription="@null"
-                    app:layout_constraintTop_toBottomOf="@id/searchBar"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent" />
-
-                <!-- "Hi, Admin" -->
+                <!-- "Hi, " -->
                 <LinearLayout
                     android:id="@+id/hiUserLayout"
                     android:layout_width="wrap_content"
@@ -185,8 +133,8 @@
                     android:orientation="horizontal"
                     android:layout_marginTop="10dp"
                     android:paddingStart="16dp"
-                    app:layout_constraintTop_toBottomOf="@id/Divider"
-                    app:layout_constraintStart_toStartOf="parent">
+                    app:layout_constraintStart_toStartOf="parent"
+                    tools:ignore="MissingConstraints">
 
                     <TextView
                         android:id="@+id/hiText"
