--- a/app/src/main/res/layout/teacher_card.xml
+++ b/app/src/main/res/layout/teacher_card.xml
@@ -84,7 +84,7 @@
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
 
-                        android:text="Email"
+                        android:text="Designation"
                         android:textSize="12sp"
                         android:textStyle="bold"
 
